@@ -1,3 +1,3 @@
-VERSION=5.00.01
+VERSION=5.00.02
 YEARS=2005-2019
 
