@@ -8,9 +8,9 @@ GPP="g++ --std=c++2a"
 #   Using tmp libraries and bobcat
 CMD="$GPP -o driver -Wall -I../../tmp driver.cc \
     -L../tmp -lsyslogbuf \
-    -L../../eoibuf/tmp -leoibuf \
-    -L../../eoi/tmp -leoi \
     -lbobcat -s"
+#    -L../../eoibuf/tmp -leoibuf \
+#    -L../../eoi/tmp -leoi \
 
 echo ${CMD}
 ${CMD}
