@@ -11,7 +11,7 @@ int main(int argc, char **argv)
 {
     cout << "messages are logged in /var/log/user.log\n";
 
-    SyslogBuf sbuf(argv[0]);
+    SyslogBuf sbuf("slb-"s + argv[0]);
 
     ostream sls(&sbuf);
 
